--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 
 html {
   background-color: #5f45bb;
-  background-image: linear-gradient(to bottom right, #180cac, #d054e4);
+  background-image: linear-gradient( 135deg, #FAB2FF 10%, #1904E5 100%);
   color: #fff;
   font-family: "Quicksand", sans-serif;
   font-size: 16px;
